# FemWA-FlowEngine4Minds

./: LICENSE  README.md  [README] FlowEngine4Mind.md  doc FemWA.md  document.html  document_en.html  env模板.txt  intro.html  main compiler.py  main.py  mainCompiler.py  pyproject.toml  pyproject.toml.txt  setup.py  文档FemWA
femBridges/: ContextExample.py  MemoryExample.py  deepseek.py  llmBridge.py  llmProviders.py
femBridges/getDir/: FEMain_dir.txt  approot_dir.txt  get_dir.py  user_dir.txt
femCompiler/: FEM_CLIrenderer.py  FEM_config.py  FEM_interpreter.py  FEM_normalizer.py  FEM_parser.py  FEM_runtime-线程改造前.py  FEM_runtime.py  FEM_scope_resolver.py  FEM_shared_utils.py  actor_resolver.py  block_collector.py  db_utils.py  femAsync.py  save_dialog.py  task_pause.py
user_data/memory/: Chronica.wor  Chronica.wor-shm
user_data/projects/debug神器/: debug神器.fems
user_data/projects/fiat/: luxfiat.fems
user_data/projects/狼人杀/: werewolf_utils.py  狼人杀.fems
